--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,7 @@
 <nav>
   <a href="/">Home</a>
   <a href="/about.html">About</a>
+  <a href="/research.html">Research</a>
+  <a href="/publications.html">Publications</a>
+   <a href="/teaching.html">Teaching</a>
 </nav>
