--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,16 +2,16 @@
   <a href="/" {% if page.url == "/" %}style="color: red;"{% endif %}>
     Home
   </a>
-  <a href="/about.html" {% if page.url == "/" %}style="color: red;"{% endif %}>
+  <a href="/about.html" {% if page.url == "/about.html" %}style="color: red;"{% endif %}>
     About
   </a>
-  <a href="/research.html" {% if page.url == "/" %}style="color: red;"{% endif %}>
+  <a href="/research.html" {% if page.url == "/research.html" %}style="color: red;"{% endif %}>
     Research
   </a>
-  <a href="/publications.html" {% if page.url == "/" %}style="color: red;"{% endif %}>
+  <a href="/publications.html" {% if page.url == "/publications.html" %}style="color: red;"{% endif %}>
     Publications
   </a>
-   <a href="/teaching.html" {% if page.url == "/" %}style="color: red;"{% endif %}>
+   <a href="/teaching.html" {% if page.url == "/teaching.html" %}style="color: red;"{% endif %}>
      Teaching
   </a>
 </nav>
