--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <h1> Joseph Tatro </h1>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -64,6 +65,7 @@
     }
     </style>
   </head>
+  
   <body>
     {{ content }}
   </body>
