--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
   <head>
+    head {
+      background-color: #f1f1f1;
+    }
     <h1> Joseph Tatro </h1>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
