--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     head {
       background-color: #f1f1f1;
     }
-    <h1> Joseph Tatro </h1>
+    <h1 class="head"> Joseph Tatro </h1>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
