--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
   <head>
+    <style>
     head {
       background-color: #f1f1f1;
     }
-    <h1 class="head"> Joseph Tatro </h1>
+    </style>
+    <h1> Joseph Tatro </h1>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
