--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <style>
     head {
-      background-color: #f1f1f1;
+      background-color: #4CAF50;
     }
     </style>
     <h1> Joseph Tatro </h1>
