--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,15 +2,19 @@
 <html>
   <head>
     <style>
-    head {
+    header {
       background-color: #4CAF50;
     }
     </style>
-    <h1> Joseph Tatro </h1>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
+  
+  <header>
+    <h1> Joseph Tatro </h1>
+  </header>
+  
   <body>
     <style>
     body {margin: 0;}
