--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,10 @@
     header {
       background-color: #4CAF50;
     }
+      
+    footer {
+      background-color: #4CAF50;
+    }
     </style>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
@@ -77,4 +81,9 @@
     </style>
     {{ content }}
   </body>
+  <footer>
+      <div>
+          njoseph.tatro@gmail.com  
+      </div>
+  </footer>
 </html>
