--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,7 +83,7 @@
   </body>
   <footer>
       <div>
-          njoseph.tatro@gmail.com  
+          <p> njoseph.tatro@gmail.com </p>  
       </div>
   </footer>
 </html>
