--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
     <style>
     header {
       background-color: #4CAF50;
+      position: fixed;
+      overflow: auto;
     }
       
     footer {
