--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,9 @@
   <head>
     <style>
     header {
+      width: 100%;
       background-color: #4CAF50;
       position: fixed;
-      overflow: auto;
     }
       
     footer {
