--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,16 @@
   <head>
     <style>
     header {
+      position: fixed;
+      top: 0;
       width: 100%;
       background-color: #4CAF50;
-      position: fixed;
     }
       
     footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
       background-color: #4CAF50;
     }
     </style>
