--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <style>
     header {
-      position: relative
+      position: sticky
       top: 0;
       width: 100%;
       background-color: #4CAF50;
