--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,11 +20,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   
-  <header>
-    <h1> Joseph Tatro </h1>
-  </header>
-  
   <body>
+    <div class="header">
+    <header>
+    <h1> Joseph Tatro </h1>
+    </header>
+    </div>
     <style>
     body {margin: 0;}
 
