--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,14 @@
   <head>
     <style>
     header {
-      position: fixed
+      position: fixed;
       top: 0;
       width: 100%;
       background-color: #4CAF50;
     }
       
     footer {
+      position: fixed;
       bottom: 0;
       width: 100%;
       background-color: #4CAF50;
@@ -88,7 +89,7 @@
     {{ content }}
   </body>
   <footer>
-      <div>
+      <div class="footer">
           <p> njoseph.tatro@gmail.com </p>  
       </div>
   </footer>
