--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <style>
+    
+    body{        
+        padding-top: 60px;
+        padding-bottom: 40px;
+    }
+      
     header {
       position: fixed;
       top: 0;
