--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,11 @@
   <head>
     <style>
     
+   th {
+    background-color: #4CAF50;
+    color: white;
+    }
+      
     body{        
         padding-top: 80px;
         padding-bottom: 60px;
@@ -13,6 +18,7 @@
       top: 0;
       width: 100%;
       background-color: #4CAF50;
+      padding-left: 20px;
     }
       
     footer {
@@ -20,6 +26,7 @@
       bottom: 0;
       width: 100%;
       background-color: #4CAF50;
+      padding-left: 20px;
     }
     </style>
     <meta charset="utf-8">
